--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "6.10.3",
     "holderjs": "2.9.4",
     "lodash": "4.16.4",
+    "prop-types": "^15.5.7",
     "react": "15.5.0",
     "react-addons-css-transition-group": "15.3.0",
     "react-dom": "15.5.0"
